inst/ex/ingress/nginx/ingress-default.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-default
spec:
  backend:
    serviceName: nginxc-black
    servicePort: 80
