inst/ex/ingress/nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /red
        backend:
          serviceName: nginxc-red
          servicePort: 80
      - path: /black
        backend:
          serviceName: nginxc-black
          servicePort: 80
