inst/ex/ingress/nginx/tr2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: colors
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: /red
        backend:
          serviceName: nginxc-red
          servicePort: http
  - http:
      paths:
      - path: /black
        backend:
          serviceName: nginxc-black
          servicePort: http
