inst/ex/ingress/nginx/traefik-ui-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: st00node01.itgildelab.net
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
